--- a/fasilitas.html
+++ b/fasilitas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Fasilitas - SMA Al-Irsyad Cilacap</title>
+  <title>Fasilitas | SMA Al-Irsyad Cilacap</title>
   <link rel="stylesheet" href="fasilitas.css" />
 </head>
 <body>
