--- a/ekskul.html
+++ b/ekskul.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ekskul - SMA Al-Irsyad Cilacap</title>
+  <title>Ekskul | SMA Al-Irsyad Cilacap</title>
   <link rel="stylesheet" href="ekskul.css">
 </head>
 <body>
