--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Beranda | SMA Al Irsyad Cilacap</title>
+  <title>Beranda | SMA Al-Irsyad Cilacap</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
   <header>
     <div class="logo-container">
       <img src="assets/smalir1.png" alt="Logo SMA Al Irsyad Cilacap" class="logo">
-      <h1>SMA Al Irsyad Cilacap</h1>
+      <h1>SMA Al-Irsyad Cilacap</h1>
     </div>
     <nav>
       <ul>
