--- a/visimisi.html
+++ b/visimisi.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Visi & Misi | SMA Al Irsyad Cilacap</title>
+  <title>Visi & Misi | SMA Al-Irsyad Cilacap</title>
   <link rel="stylesheet" href="visimisi.css" />
 </head>
 <body>
   <header>
     <div class="logo-container">
       <img src="assets/smalir1.png" alt="Logo SMA Al Irsyad Cilacap" class="logo">
-      <h1>SMA Al Irsyad Cilacap</h1>
+      <h1>SMA Al-Irsyad Cilacap</h1>
     </div>
     <nav>
       <ul>
