--- a/guru.html
+++ b/guru.html
@@ -33,15 +33,15 @@
 
       <div class="guru-grid">
         <div class="guru-card">
-          <img src="assets/guru1.jpg" alt="Guru 1">
-          <h3>Prayitno, M.Pd</h3>
-          <p>Guru Mata Pelajaran</p>
+          <img src="assets/guru17.jpg" alt="Guru 6">
+          <h3>M. Syarif Mubarok, S.Ag</h3>
+          <p>Kepala Sekolah</p>
         </div>
 
         <div class="guru-card">
-          <img src="assets/guru2.jpg" alt="Guru 2">
-          <h3>Sri Kundari, S. E</h3>
-          <p>Staf TU</p>
+          <img src="assets/guru1.jpg" alt="Guru 1">
+          <h3>Prayitno, M.Pd</h3>
+          <p>Guru Mata Pelajaran</p>
         </div>
 
         <div class="guru-card">
@@ -129,12 +129,6 @@
         </div>
 
         <div class="guru-card">
-          <img src="assets/guru17.jpg" alt="Guru 6">
-          <h3>M. Syarif Mubarok, S.Ag</h3>
-          <p>Kepala Sekolah</p>
-        </div>
-
-        <div class="guru-card">
           <img src="assets/guru18.jpg" alt="Guru 6">
           <h3>Azizah, S.Pd</h3>
           <p>Guru Mata Pelajaran</p>
@@ -178,7 +172,7 @@
 
         <div class="guru-card">
           <img src="assets/guru25.jpg" alt="Guru 6">
-          <h3>Hanifah Nur Budikarti, S.S.i</h3>
+          <h3>Hanifah Nur Budikarti, S.Si</h3>
           <p>Pustakawan</p>
         </div>
 
@@ -186,6 +180,12 @@
           <img src="assets/guru26.jpg" alt="Guru 6">
           <h3>Endah Nita Quderatih, S.Pd</h3>
           <p>Guru BK</p>
+        </div>
+
+        <div class="guru-card">
+          <img src="assets/guru2.jpg" alt="Guru 2">
+          <h3>Sri Kundari, S. E</h3>
+          <p>Staf TU</p>
         </div>
       </div>
     </section>
